@@ -1,5 +1,11 @@
 2009-01-10  Thomas Mills Hinkle  <tom@hydrophax>
 
+	* src/lib/backends/db.py (RecData._setup_object_for_table): All
+	tables need an explicit primary key declared now -- sqlalchemy no
+	longer supports implicit oid/rowid in 0.5
+	(RecData.setup_info_table): Add sqlite rowid column to table
+	explicitly.
+
 	* src/lib/plugin.py (MainPlugin): Add base methods to MainPlugin
 	to make it easy to add a tab to main interface (add_tab)
 
